...
            android:layout_height="wrap_content"
            android:src="@drawable/line_break"
            android:layout_marginRight="15dp"
            ></ImageView>

        <Button
            android:id="@+id/tax"
            android:layout_width="match_parent"
            android:layout_height="225px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:onClick="TaxPage"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line_break"
            android:layout_marginRight="15dp"
            ></ImageView>
        <Button
            android:id="@+id/hEvents"
            android:layout_width="match_parent"
            android:layout_height="225px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="Calender"
            android:padding="10dp"
...
            android:layout_height="wrap_content"
            android:src="@drawable/line_break"
            android:layout_marginRight="15dp"
            ></ImageView>

        <Button
            android:id="@+id/invoice"
            android:layout_width="match_parent"
            android:layout_height="225px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="JobsList"
            android:padding="10dp"
...
            android:layout_height="wrap_content"
            android:src="@drawable/line_break"
            android:layout_marginRight="15dp"
            ></ImageView>

        <Button
            android:id="@+id/tradeCards"
            android:layout_width="match_parent"
            android:layout_height="225px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="TradeCards"
            android:layout_marginTop="10dp"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line_break"
            android:layout_marginRight="15dp"
            ></ImageView>
        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="225px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="Logout"
            android:layout_marginTop="10dp"
...
