...
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/darker_gray"
            android:textSize="15dp"
            android:text="January"
            android:onClick="January"

            >

        </Button>

...
